--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/ol-ext": "npm:@siedlerchr/types-ol-ext@^1.5.0",
     "vite": "^2.6.7"
   },
   "dependencies": {
